# yandex_music_discord_presence

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENCE.txt  README.md
include/: album_art_finder.h  discord_client.h  media_session.h  tray_icon.h
src/: album_art_finder.cpp  app.rc  discord_client.cpp  main.cpp  media_session.cpp  media_session.h  tray_icon.cpp  tray_icon.h
